python: closest_point_on_mesh isn't accurate #41479

Closed
opened 2014-08-18 18:35:56 +02:00 by Jakub Uhlik · 8 comments

System Information
OS X 10.9 and 10.8

Blender Version
Broken: 2.71
Worked: (optional)

Short description of error
closest_point_on_mesh gives not accurate results, found that during writing sphere filling script, i calculate radius of sphere as distance of center location and closest_point_on_mesh, and resulting spheres are intersecting with mesh.

Exact steps for others to reproduce the error
here is simple .blend demonstrating supposed bug, open blend, run short script and check expected nearest point and cursor location which will snap on closest_point_on_mesh result.
closest_point_on_mesh-bug.blend

**System Information** OS X 10.9 and 10.8 **Blender Version** Broken: 2.71 Worked: (optional) **Short description of error** closest_point_on_mesh gives not accurate results, found that during writing sphere filling script, i calculate radius of sphere as distance of center location and closest_point_on_mesh, and resulting spheres are intersecting with mesh. **Exact steps for others to reproduce the error** here is simple .blend demonstrating supposed bug, open blend, run short script and check expected nearest point and cursor location which will snap on closest_point_on_mesh result. [closest_point_on_mesh-bug.blend](https://archive.blender.org/developer/F104852/closest_point_on_mesh-bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JakubUhlik

Added subscriber: @JakubUhlik
Author

and i wanted to add a python tag, but for some reason i can't edit my own task.. is this a bug too? :)

and i wanted to add a python tag, but for some reason i can't edit my own task.. is this a bug too? :)

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

The author of a task can not edit it, this is a phabricator thing independent from this website, see https://secure.phabricator.com/D10012.

To add a project simply do Action -> Associate Projects (in the comment section). I'll do it, but you'll know for next time :).

The author of a task can not edit it, this is a phabricator thing independent from this website, see https://secure.phabricator.com/D10012. To add a project simply do Action -> Associate Projects (in the comment section). I'll do it, but you'll know for next time :).
Campbell Barton changed title from python: closest_point_on_mesh is accurate to python: closest_point_on_mesh isn't accurate 2014-08-19 09:06:10 +02:00
Campbell Barton self-assigned this 2014-08-19 09:06:10 +02:00

This issue was referenced by blender/blender@95ae98caea

This issue was referenced by blender/blender@95ae98caead10e072753fa1b5b80c8f086355cb5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@95ae98caea.

Closed by commit blender/blender@95ae98caea.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#41479
No description provided.