Fix T41479: BLI_bvhtree_find_nearest inaccurate

Gives noticeably better results for shrink-wrap (even in simple cases)